clusters/cluster/homeautomation/homeassistant/homeassistant.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
      - name: home-assistant
        image: homeassistant/home-assistant:2025.1.0 # {"$imagepolicy": "flux-system:homeassistant"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8123
        volumeMounts:
        - mountPath: /config
          name: config
        securityContext:
          privileged: true
      hostNetwork: true
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: homeassistant-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  loadBalancerIP: 10.10.10.63
  ports:
  - name: http
    protocol: TCP
    port: 8123
    targetPort: 8123
  selector:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: "unifi"
  labels:
    app.kubernetes.io/name: unifi
  name: unifi-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: unifi.tallflix.ca
    http:
      paths:
      - backend:
          service:
            name: home-assistant
            port:
              number: 8123
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hass.tallflix.ca
    secretName: tls-secret
status:
  loadBalancer:
    ingress:
    - ip: 10.10.10.63
